--- a/sitemario/index.css
+++ b/sitemario/index.css
@@ -61,6 +61,7 @@ footer {
   box-sizing: border-box; /* Inclui padding na largura total */
   column-gap: 6rem;
   height: 5rem;
+  overflow: hidden;
 }
 
 .logo-left,
